# bsplines

./: CMakeLists.txt  bsplines.cpp  bsplines.hpp
examples/: bspline_basis.cpp
splines2Armadillo/: MSpline.h  NaturalSpline.h  SplineBase.h  common.h  utils.h
